// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> renders highlighted 1`] = `
<li
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <ButtonOrLink
    aria-expanded={false}
    aria-haspopup={false}
    className="item-0-2-1 item_highlighted-0-2-4"
    role="menuitem"
    tabIndex={-1}
  >
    Foo
  </ButtonOrLink>
</li>
`;

exports[`<MenuItem /> renders spacious 1`] = `
<li
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <ButtonOrLink
    aria-expanded={false}
    aria-haspopup={false}
    className="item-0-2-1 item_spacious-0-2-2"
    role="menuitem"
    tabIndex={-1}
  >
    Foo
  </ButtonOrLink>
</li>
`;
